# book_management_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: main.py  pg_isready.py  router.py
app/api/: books.py
app/core/: config.py  logger.py
app/core/exceptions/: base_exception.py  error_handlers.py
app/core/middlewares/: __init__.py  execution_middleware.py
app/migrations/: alembic.ini  env.py
app/models/api/: author.py  books.py  genre.py
